--- a/projects/my-control-library/src/lib/my-control-library.component.html
+++ b/projects/my-control-library/src/lib/my-control-library.component.html
@@ -1,5 +1,8 @@
-<p>
-    my-control-library works well!
-</p>
-<hr />
-<button mat-raised-button color="primary">Click me!!!!!</button>
+<h1>{{ title }}</h1>
+<h2>{{ subtitle }}</h2>
+
+<hr *ngIf="title || subtitle">
+
+<p>{{ content }}</p>
+
+<button mat-raised-button color="primary" (click)="handleBtnClick()">Click me!</button>
